frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.main {
  @apply min-h-screen py-16;
}

.header {
  @apply fixed top-0 flex w-full items-center justify-between gap-4 bg-[#ffffff] px-4 py-2;
}

.footer {
  @apply fixed bottom-0 w-full bg-[#FCE3D7] px-4 py-2;
}

.h1 {
  @apply my-8 text-center text-4xl font-bold;
}

.logo {
  @apply left-0 my-8 text-5xl font-bold text-[#ec5a13];
}

.h2 {
  @apply my-8 text-center text-2xl font-bold;
}

.section {
  @apply flex flex-col items-center gap-4 bg-gray-200 p-8;
}

.form {
  @apply mb-4 flex flex-col gap-2 rounded-xl bg-white px-8 pb-8 pt-6 shadow-md;
}

.button {
  @apply min-w-[100px] bg-[#ec5a13] px-4 py-2 text-white;
}

.button-grey {
  @apply min-w-[100px] bg-[#d9d9d9] px-4 py-2;
}

.navbar-mobile {
  @apply h-full w-full;
}

.menu-ul--horizontal {
  @apply flex items-center justify-between px-3;
}

.navbar-desktop {
  @apply flex gap-4;
}

.search-bar-container {
  @apply relative mr-auto flex-grow rounded-lg border-y-2 border-[#ec5a13];
}

.search-bar {
  @apply w-full rounded-lg border-[#ec5a13];
}

.nav-element-desktop {
  @apply hidden;
}

.carousel {
  @apply flex h-44 w-full items-center justify-around bg-[#FCE3D7];
}

.carousel-item {
  @apply flex w-[80%] items-center justify-center gap-10;
}

.carousel-text {
  @apply text-center text-sm font-semibold;
}

.home-section {
  @apply mt-16 flex flex-col items-center justify-center text-center;
}

@media screen and (min-width: 645px) {
  .header {
    @apply gap-6 px-6;
  }

  .navbar-mobile {
    @apply hidden;
  }

  .footer {
    @apply hidden;
  }

  .search-bar-container {
    @apply max-w-[50%];
  }

  .nav-element-desktop {
    @apply flex;
  }
}

@media screen and (min-width: 1024px) {
  .header {
    @apply px-8;
  }

  .navbar-desktop {
    @apply flex gap-6;
  }

  .search-bar-container {
    @apply ml-4;
  }
}

